objects/LLC_BI__Data_Source__c.object
<CustomObject>
    <description>This object contains information about the feature each Data Source and Data Source Item are related to.</description>
    <fields>
        <fullName>LLC_BI__External_Name__c</fullName>
        <description>The system automatically populates this field with the name of the component in the external output.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Related_Feature__c</fullName>
        <description>This required picklist field determines the feature this data source is associated to.</description>
        <label>Related Feature</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spreads - Data Recognition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Data Source</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>